# Essentials-of-Compilation-Python

./: README.md  compiler.py  interp_lif.py  interp_lint.py  interp_lvar.py  parser.py  pyproject.toml  runtime.c  runtime.h  type_check_l_if.py  type_check_l_var.py  utils.py  x86_ast.py
examples/: compile.py  run_lint.py  run_lint_pe.py  run_lvar.py  run_lvar_pe.py
runtime/: runtime.c
src/: __init__.py  ast_nodes.py  compiler_var.py  interpreter_int.py  interpreter_var.py  partial_eval_int.py  partial_eval_var.py  x86_ast.py  x86_emitter.py
src/lint_compiler/: __init__.py  ast_nodes.py  interpreter_int.py  partial_eval_int.py
tests/: test_ast_nodes.py  test_compiler.py  test_compiler_var.py  test_example_runner.py  test_interp_lif.py  test_interp_lint.py  test_interp_lvar.py  test_interpreter_int.py  test_interpreter_var.py  test_parser.py  test_partial_eval_int.py  test_partial_eval_var.py  test_type_check_manual.py  test_utils.py  test_x86_ast.py
