[project]
name = "lint-compiler"
version = "0.1.0"
description = "Learning compilation with Python - based on 'Essentials of Compilation'"
readme = "README.md"
authors = [
    { name = "watsy0007", email = "watsy0007@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
